--- a/requirements.txt
+++ b/requirements.txt
@@ -32,8 +32,8 @@ pycparser==2.22
 PyJWT==2.10.1
 pymongo==4.11.2
 python-dotenv==1.0.1
-python-magic==0.4.27
-python-magic-bin==0.4.14
+python-magic
+python-magic-bin
 pythonnet==3.0.5
 pywebview==5.4
 SQLAlchemy==2.0.38
